--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -8,7 +8,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:title="Criar Tarefa"
+        app:title="@string/label_new_task"
         app:navigationIcon="@drawable/ic_navigate"
         app:layout_constraintTop_toTopOf="parent"/>
 
